Fix: Wires in machine were now misaligned with output block.

--- a/style/components/machine.styl
+++ b/style/components/machine.styl
@@ -305,8 +305,7 @@
 //
 .section--output {
 	position: relative
-	// margin-top: $section__offset
-	margin-top: 20px
+	margin-top: 70px
 	width: 300px
 }
 
